k8/prometheus_stack/prometheus/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: production
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.qurtana.com.ng
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
  tls:
    - hosts:
        - prometheus.qurtana.com.ng
      secretName: production-cluster-issuer
